# fastapi-antd-admin

./: .gitignore  README.md  package.json  pnpm-lock.yaml  test.py
backend/: .env.example  README.md  main.py  main_app.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c051f553c7f_sys_dictionary_table_turn_to_created_at_.py  100de9d11e61_link_user_id_not_null.py  25a3b6879a46_news_table.py  302650d4fde8_docs_feed_back_table_turn_to_created_at_.py  316816ffc578_delete_changelog_userid.py  3ea0ecba057c_loginlog_table_add_created_at_updated_at.py  3eca1ae3d607_news_table_and_news_category_table_add_.py  4fb450d94e1c_init.py  510a9b2e0530_sys_department_table_turn_to_created_at_.py  622d6ce1333d_storage_table_turn_to_created_at_.py  644478f0d5a9_changelog_user_id.py  662632f4d89d_init.py  74045195b519_sys_menu_table_turn_to_created_at_.py  743d6d16a737_profile_link_table_and_profile_link_.py  9d3dc66cffc7_blog_category_table_created_at_updated_.py  b1cdcd60ce58_sys_dictionary_table_turn_to_created_at_.py  bc9fc74fd682_menu_table_turn_to_is_show_is_cache_is_.py  c1ac06466c60_blog_table_view_count_published_at.py  c351184a87a2_sys_user_table_turn_to_created_at_.py  c5dd31e708cb_blog_tag_table_created_at_updated_at.py  d42bb54ff1ed_user_sign_logtable_turn_to_created_at_.py  dfc98ed7fe56_mail_table_add_created_at_updated_at.py  e0997ddb12c1_docs_changelog_table_turn_to_created_at_.py  eb638e415585_link_user_id.py  f20f4da6b3e7_init.py  f73c8cb0fdac_sys_role_table_turn_to_created_at_.py  fcbd16bc58cd_blog_table_created_at_updated_at.py
backend/app/api/: __init__.py
backend/app/config/: __init__.py  config.py
backend/app/db/: base.py  (+1 more)
(+436 files in other folders)
